@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
        {abstract} + createDAOArtist()
        {abstract} + createDAOClient()
        {abstract} + createDAOEpisodi()
        {abstract} + createDAOSerie()
        {abstract} + createDAOTemporada()
        {abstract} + createDAOUsuari()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
        + DataService()
        + getAllClients()
        + getAllEpisodis()
        + getAllSeries()
        + getAllTemporades()
        + getAllUsuaris()
        + getClientByUsuariAndPassword()
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
        + createDAOArtist()
        + createDAOClient()
        + createDAOEpisodi()
        + createDAOSerie()
        + createDAOTemporada()
        + createDAOUsuari()
    }
  }
  

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOArtist : artistDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEpisodi : episodiDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOTemporada : temporadaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOUsuari : usariDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
